[package]
name = "kubex"
version = "0.2.1"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2024"
description = "Utilities for Kubernetes"
repository = "https://github.com/ynqa/kubex"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
# See https://github.com/kube-rs/kube/issues/1562 about `aws-lc-rs` feature
kube = { version = "2.0.1", features = ["client", "rustls-tls", "aws-lc-rs"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
