[package]
name = "kubex"
version = "0.3.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2024"
description = "Utilities for Kubernetes"
repository = "https://github.com/ynqa/kubex"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap_complete = { version = "4.5.59", features = ["unstable-dynamic"] }
futures = "0.3.31"
dirs = "6.0.0"
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
# See https://github.com/kube-rs/kube/issues/1562 about `aws-lc-rs` feature
kube = { version = "2.0.1", features = ["client", "rustls-tls", "aws-lc-rs", "runtime"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
